# llm_eval

./: .env.example  .env.sample  .gitignore  .pre-commit-config.yaml  README.md  README_NEW.md  SETUP_NEW_TESTS.md  SETUP_YOUR_TESTS.md  TLDR.md  langfuse_enhancement_suggestions.md  main_evaluation.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  dockerfile
docs/: 01-questions-duckdb.yaml  01-questions.yaml  02-database_schema.yaml  03-semantic-rules.md  03-semantic_rules-duckdb.md  04-system_message-duckdb.md  04-system_message.md  05-models.yaml  AGG_questions_summary_results_llm.xlsx
docs/results/: performace_report_duckdb.xlsx  performance_report-sql-server.xlsx  performance_report.txt  performance_report.xlsx  performance_report_duckdb.txt  performance_report_sql-server.txt  questions_summary_results_llm_01_20250601_2104.csv  questions_summary_results_llm_01_20250601_2134.csv  questions_summary_results_llm_01_20250610_1841.csv  questions_summary_results_llm_01_20250610_1847.csv  questions_summary_results_llm_01_20250627_1836.csv  questions_summary_results_llm_01_20250627_1950.csv  questions_summary_results_llm_01_20250629_1912.csv  questions_summary_results_llm_01_duckdb_20250705_1414.csv  questions_summary_results_llm_01_duckdb_20250806_1953.csv  results_llm_01_DeepSeek-V3-0324.yaml  results_llm_01_DeepSeek-V3-0324_20250629_1912.yaml  results_llm_01_Llama-3.3-70B-Instruct.yaml  results_llm_01_Llama-3.3-70B-Instruct_20250629_1912.yaml  results_llm_01_Llama-4-Maverick-17B-128E-Instruct-FP8.yaml  results_llm_01_Llama-4-Scout-17B-16E-Instruct.yaml  results_llm_01_Mistral-Large-2411.yaml  results_llm_01_Mistral-Large-2411_20250629_1912.yaml  (+43 more)
python_modules/: database_schema_tables.py  llms_evaluator.py  module_azure_openai.py  module_data.py  module_llm.py  module_utils.py  questions.py
scripts/: setup_duckdb.py
src/: llms_evaluator.py  main_evaluation.py
(+64 files in other folders)
